<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:onClick="onClickMainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/flash_background">


    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />


    <EditText
        android:id="@+id/edText"
        android:layout_width="88dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:background="#00000000"
        android:backgroundTint="#00000000"
        android:cursorVisible="false"
        android:fontFamily="@font/calculator"
        android:inputType="number"
        android:maxLength="3"
        android:onClick="onClickEdText"
        android:selectAllOnFocus="true"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/timer_switch"
        app:layout_constraintStart_toEndOf="@+id/timer_switch"
        app:layout_constraintTop_toTopOf="@+id/timer_switch"
        app:layout_constraintVertical_bias="0.35"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/ib_torch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription=""
        app:srcCompat="@drawable/fl_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageButton
        android:id="@+id/ib_torch_tap"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#00000000"
        android:contentDescription=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_torch"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:src="@drawable/tap" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/timer_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:checked="true"
        android:switchMinWidth="110dp"
        android:switchPadding="100dp"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:track="@drawable/switch_background"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/settings_stroke"
        android:onClick="onClickSetting"
        app:layout_constraintStart_toStartOf="@+id/about"
        app:layout_constraintTop_toBottomOf="@+id/about"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/info_stroke"
        android:onClick="onClickAbout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_bat_tint"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:text="@string/battery_charge"
        android:textColor="#ddd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <TextView
        android:id="@+id/tv_bat_vol"
        android:fontFamily="@font/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="#428634"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bat_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toEndOf="@+id/tv_bat_tint"
        app:layout_constraintTop_toTopOf="@+id/tv_bat_tint"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/screen_light"
        android:layout_width="43dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/screen_flash_stroke"
        android:onClick="onClickScreenLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageButton
        android:id="@+id/rotate"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rotation_stroke"
        android:onClick="onClickRotate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/not_turn_is_locked_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/not_turn_is_locked_white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <ImageButton
        android:id="@+id/ib_strobo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/app_name"
        android:onClick="onClickStrobo"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/strobo" />


</androidx.constraintlayout.widget.ConstraintLayout>
